// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultFluentDarkTheme 1`] = `
{
  "colors": {
    "accentButtonBackground": "#0c3b5e",
    "actionLink": "#f3f2f1",
    "background": "#1b1a19",
    "bodyDivider": "#292827",
    "bodyFrameBackground": "#1b1a19",
    "bodyFrameDivider": "#292827",
    "bodyStandoutBackground": "#201f1e",
    "bodyText": "#f3f2f1",
    "bodyTextChecked": "#ffffff",
    "brandBackground": "#479ef5",
    "brandBackground2": undefined,
    "brandBackground2Pressed": undefined,
    "brandBackground2Selected": undefined,
    "brandBackground3": undefined,
    "brandBackgroundDisabled": "#0c3b5e",
    "brandBackgroundPressed": "#96c6fa",
    "brandBackgroundSelected": "#77b7f7",
    "brandBackgroundTint": "#0c3b5e",
    "brandForeground1": "#479ef5",
    "brandForeground1Pressed": "#96c6fa",
    "brandForeground1Selected": "#77b7f7",
    "brandForegroundDisabled1": "#2886de",
    "brandForegroundDisabled2": "#0c3b5e",
    "brandForegroundTint": "#96c6fa",
    "brandStroke1": "#479ef5",
    "brandStroke1Pressed": "#96c6fa",
    "brandStroke1Selected": "#77b7f7",
    "brandStrokeTint": "#479ef5",
    "brandedBackground": "#2886de",
    "brandedDisabledBorder": "#252423",
    "brandedFocusedSecondaryContent": "#201f1e",
    "brandedHoveredSecondaryContent": "#201f1e",
    "brandedPressedSecondaryContent": "#201f1e",
    "brandedSecondaryContent": "#201f1e",
    "buttonBackground": "#252423",
    "buttonBackgroundChecked": "#484644",
    "buttonBackgroundDisabled": "#252423",
    "buttonBackgroundHovered": "#292827",
    "buttonBackgroundPressed": "#292827",
    "buttonBorder": "#979693",
    "buttonBorderDisabled": "#252423",
    "buttonBorderFocused": "#979693",
    "buttonText": "#ffffff",
    "buttonTextChecked": "#faf9f8",
    "buttonTextDisabled": "#797775",
    "buttonTextHovered": "#f3f2f1",
    "buttonTextPressed": "#faf9f8",
    "checkboxBackground": "#2886de",
    "checkboxBackgroundDisabled": "#252423",
    "checkboxBorderColor": "#979693",
    "checkmarkColor": "#1b1a19",
    "dangerBackground1": "#3f1011",
    "dangerBackground2": "#bc2f32",
    "dangerForeground1": "#e37d80",
    "dangerForeground2": "#e37d80",
    "dangerStroke1": "#dc5e62",
    "defaultBackground": "#252423",
    "defaultBorder": "#979693",
    "defaultCheckedBackground": "#484644",
    "defaultCheckedContent": "#faf9f8",
    "defaultCheckedHoveredBackground": "#292827",
    "defaultCheckedHoveredContent": "#f3f2f1",
    "defaultContent": "#ffffff",
    "defaultDisabledBackground": "#252423",
    "defaultDisabledBorder": "#252423",
    "defaultDisabledContent": "#797775",
    "defaultDisabledIcon": "#797775",
    "defaultFocusedBackground": "#292827",
    "defaultFocusedBorder": "#979693",
    "defaultFocusedContent": "#f3f2f1",
    "defaultFocusedIcon": "#f3f2f1",
    "defaultHoveredBackground": "#292827",
    "defaultHoveredBorder": "#979693",
    "defaultHoveredContent": "#f3f2f1",
    "defaultHoveredIcon": "#f3f2f1",
    "defaultHoveredSecondaryContent": "#797775",
    "defaultIcon": "#ffffff",
    "defaultPressedBackground": "#292827",
    "defaultPressedBorder": "#979693",
    "defaultPressedContent": "#faf9f8",
    "defaultPressedIcon": "#faf9f8",
    "defaultPressedSecondaryContent": "#797775",
    "disabledBackground": "#323130",
    "disabledBodyText": "#797775",
    "disabledText": "#797775",
    "errorText": "#ff5f5f",
    "focusBorder": "#a19f9d",
    "ghostBackground": "#1b1a19",
    "ghostBorder": "#1b1a19",
    "ghostCheckedBackground": "#292827",
    "ghostCheckedContent": "#ffffff",
    "ghostCheckedHoveredBackground": "#252423",
    "ghostCheckedHoveredBorder": "#faf9f8",
    "ghostCheckedHoveredContent": "#faf9f8",
    "ghostContent": "#f3f2f1",
    "ghostDisabledBackground": "#1b1a19",
    "ghostDisabledBorder": "#1b1a19",
    "ghostDisabledContent": "#797775",
    "ghostDisabledIcon": "#797775",
    "ghostFocusedBackground": "#252423",
    "ghostFocusedBorder": "#979693",
    "ghostFocusedContent": "#faf9f8",
    "ghostFocusedIcon": "#faf9f8",
    "ghostFocusedSecondaryContent": "#a19f9d",
    "ghostHoveredBackground": "#252423",
    "ghostHoveredBorder": "#252423",
    "ghostHoveredContent": "#faf9f8",
    "ghostHoveredIcon": "#faf9f8",
    "ghostHoveredSecondaryContent": "#a19f9d",
    "ghostIcon": "#f3f2f1",
    "ghostPressedBackground": "#292827",
    "ghostPressedBorder": "#292827",
    "ghostPressedContent": "#faf9f8",
    "ghostPressedIcon": "#faf9f8",
    "ghostPressedSecondaryContent": "#a19f9d",
    "ghostSecondaryContent": "#a19f9d",
    "inputBackground": "#1b1a19",
    "inputBorder": "#797775",
    "inputFocusBorderAlt": "#2886de",
    "inputPlaceholderText": "#a19f9d",
    "inputText": "#f3f2f1",
    "link": "#2886de",
    "linkHovered": "#62abf5",
    "linkPressed": "#479ef5",
    "listHeaderBackgroundHovered": "#252423",
    "listHeaderBackgroundPressed": "#292827",
    "menuBackground": "#252423",
    "menuDivider": "#484644",
    "menuIcon": "#479ef5",
    "menuItemBackgroundHovered": "#323130",
    "menuItemBackgroundPressed": "#3b3a39",
    "menuItemText": "#f3f2f1",
    "menuItemTextHovered": "#faf9f8",
    "neutralBackground1": "#000000",
    "neutralBackground1Pressed": "#2e2e2e",
    "neutralBackground1Selected": "#242424",
    "neutralBackground2": "#1f1f1f",
    "neutralBackground2Pressed": "#4d4d4d",
    "neutralBackground2Selected": "#424242",
    "neutralBackground3": "#292929",
    "neutralBackground3Pressed": "#575757",
    "neutralBackground3Selected": "#4d4d4d",
    "neutralBackground4": "#333333",
    "neutralBackground4Pressed": "#616161",
    "neutralBackground4Selected": "#575757",
    "neutralBackground5": "#3d3d3d",
    "neutralBackground5Pressed": "#6b6b6b",
    "neutralBackground5Selected": "#616161",
    "neutralBackground6": "#5c5c5c",
    "neutralBackgroundCanvas": "#141414",
    "neutralBackgroundDarkStatic": "#3d3d3d",
    "neutralBackgroundDisabled": "#525252",
    "neutralBackgroundInverted": "#b8b8b8",
    "neutralBackgroundLightStatic": "#ffffff",
    "neutralBackgroundLightStaticDisabled": "#adadad",
    "neutralForeground1": "#ffffff",
    "neutralForeground2": "#d6d6d6",
    "neutralForeground3": "#adadad",
    "neutralForegroundDarkStatic": "#000000",
    "neutralForegroundDisabled1": "#5c5c5c",
    "neutralForegroundDisabled2": "#2e2e2e",
    "neutralForegroundLightStatic": "#ffffff",
    "neutralForegroundOnColor": "#000000",
    "neutralStencil1": "#575757",
    "neutralStencil2": "#333333",
    "neutralStroke1": "#4d4d4d",
    "neutralStroke2": "#3d3d3d",
    "neutralStrokeAccessible": "#9e9e9e",
    "neutralStrokeDisabled": "#424242",
    "neutralStrokeFocus1": "#000000",
    "neutralStrokeFocus2": "#ffffff",
    "personaActivityGlow": "#2886de",
    "personaActivityRing": "#1b1a19",
    "presenceAvailable": "#3db838",
    "presenceAway": "#eaa300",
    "presenceDnd": "#d7494c",
    "presenceOof": "#d161c4",
    "primaryButtonBackground": "#2886de",
    "primaryButtonBackgroundDisabled": "#252423",
    "primaryButtonBackgroundHovered": "#479ef5",
    "primaryButtonBackgroundPressed": "#479ef5",
    "primaryButtonBorder": "transparent",
    "primaryButtonBorderFocused": "transparent",
    "primaryButtonText": "#1b1a19",
    "primaryButtonTextDisabled": "#3b3a39",
    "primaryButtonTextHovered": "#1b1a19",
    "primaryButtonTextPressed": "#1b1a19",
    "severeBackground1": "#411200",
    "severeBackground2": "#c43501",
    "severeForeground1": "#e9835e",
    "severeForeground2": "#e9835e",
    "severeStroke1": "#e36537",
    "subText": "#a19f9d",
    "successBackground1": "#052505",
    "successBackground2": "#0e700e",
    "successForeground1": "#54b054",
    "successForeground2": "#54b054",
    "successStroke1": "#359b35",
    "variantBorder": "#292827",
    "warningBackground1": "#4c4400",
    "warningBackground2": "#e4cc00",
    "warningForeground1": "#feee66",
    "warningForeground2": "#feee66",
    "warningStroke1": "#c0ad00",
  },
  "components": {},
  "host": {
    "appearance": "dark",
  },
  "shadows": {
    "shadow16": {
      "ambient": {
        "blur": 2,
        "color": "#0000003d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 16,
        "color": "#00000047",
        "x": 0,
        "y": 8,
      },
    },
    "shadow16brand": {
      "ambient": {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 16,
        "color": "#00000040",
        "x": 0,
        "y": 8,
      },
    },
    "shadow2": {
      "ambient": {
        "blur": 2,
        "color": "#0000003d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 2,
        "color": "#00000047",
        "x": 0,
        "y": 1,
      },
    },
    "shadow28": {
      "ambient": {
        "blur": 8,
        "color": "#00000066",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 28,
        "color": "#0000007a",
        "x": 0,
        "y": 14,
      },
    },
    "shadow28brand": {
      "ambient": {
        "blur": 8,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 28,
        "color": "#00000040",
        "x": 0,
        "y": 14,
      },
    },
    "shadow2brand": {
      "ambient": {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 2,
        "color": "#00000040",
        "x": 0,
        "y": 1,
      },
    },
    "shadow4": {
      "ambient": {
        "blur": 2,
        "color": "#0000003d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 4,
        "color": "#00000047",
        "x": 0,
        "y": 2,
      },
    },
    "shadow4brand": {
      "ambient": {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 4,
        "color": "#00000040",
        "x": 0,
        "y": 2,
      },
    },
    "shadow64": {
      "ambient": {
        "blur": 8,
        "color": "#00000066",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 64,
        "color": "#0000007a",
        "x": 0,
        "y": 32,
      },
    },
    "shadow64brand": {
      "ambient": {
        "blur": 8,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 64,
        "color": "#00000040",
        "x": 0,
        "y": 32,
      },
    },
    "shadow8": {
      "ambient": {
        "blur": 2,
        "color": "#0000003d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 8,
        "color": "#00000047",
        "x": 0,
        "y": 4,
      },
    },
    "shadow8brand": {
      "ambient": {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 8,
        "color": "#00000040",
        "x": 0,
        "y": 4,
      },
    },
  },
  "spacing": {
    "l1": "20px",
    "l2": "32px",
    "m": "16px",
    "s1": "8px",
    "s2": "4px",
  },
  "typography": {
    "families": {
      "cursive": "System",
      "monospace": "System",
      "numeric": "System",
      "primary": "System",
      "sansSerif": "System",
      "secondary": "System",
      "serif": "System",
    },
    "sizes": {
      "body": 15,
      "caption": 12,
      "header": 20,
      "hero": 28,
      "heroLarge": 60,
      "secondary": 13,
      "subheader": 17,
    },
    "variants": {
      "body1": {
        "face": "primary",
        "size": "secondary",
        "weight": "regular",
      },
      "body1Strong": {
        "face": "primary",
        "size": "secondary",
        "weight": "semiBold",
      },
      "body2": {
        "face": "primary",
        "size": "body",
        "weight": "regular",
      },
      "body2Strong": {
        "face": "primary",
        "size": "body",
        "weight": "semiBold",
      },
      "bodySemibold": {
        "face": "primary",
        "size": "body",
        "weight": "semiBold",
      },
      "bodyStandard": {
        "face": "primary",
        "size": "body",
        "weight": "regular",
      },
      "caption1": {
        "face": "primary",
        "size": "caption",
        "weight": "regular",
      },
      "caption1Strong": {
        "face": "primary",
        "size": "caption",
        "weight": "semiBold",
      },
      "captionStandard": {
        "face": "primary",
        "size": "caption",
        "weight": "regular",
      },
      "display": {
        "face": "primary",
        "size": "heroLarge",
        "weight": "semiBold",
      },
      "headerSemibold": {
        "face": "primary",
        "size": "header",
        "weight": "semiBold",
      },
      "headerStandard": {
        "face": "primary",
        "size": "header",
        "weight": "regular",
      },
      "heroLargeSemibold": {
        "face": "primary",
        "size": "heroLarge",
        "weight": "semiBold",
      },
      "heroLargeStandard": {
        "face": "primary",
        "size": "heroLarge",
        "weight": "regular",
      },
      "heroSemibold": {
        "face": "primary",
        "size": "hero",
        "weight": "semiBold",
      },
      "heroStandard": {
        "face": "primary",
        "size": "hero",
        "weight": "regular",
      },
      "largeTitle": {
        "face": "primary",
        "size": "heroLarge",
        "weight": "regular",
      },
      "secondarySemibold": {
        "face": "primary",
        "size": "secondary",
        "weight": "semiBold",
      },
      "secondaryStandard": {
        "face": "primary",
        "size": "secondary",
        "weight": "regular",
      },
      "subheaderSemibold": {
        "face": "primary",
        "size": "subheader",
        "weight": "semiBold",
      },
      "subheaderStandard": {
        "face": "primary",
        "size": "subheader",
        "weight": "regular",
      },
      "subtitle1": {
        "face": "primary",
        "size": "header",
        "weight": "regular",
      },
      "subtitle1Strong": {
        "face": "primary",
        "size": "header",
        "weight": "semiBold",
      },
      "subtitle2": {
        "face": "primary",
        "size": "subheader",
        "weight": "regular",
      },
      "subtitle2Strong": {
        "face": "primary",
        "size": "subheader",
        "weight": "semiBold",
      },
      "title1": {
        "face": "primary",
        "size": "hero",
        "weight": "regular",
      },
      "title1Strong": {
        "face": "primary",
        "size": "hero",
        "weight": "semiBold",
      },
    },
    "weights": {
      "regular": "400",
      "semiBold": "600",
    },
  },
}
`;

exports[`defaultFluentHighConstrastTheme 1`] = `
{
  "colors": {
    "accentButtonBackground": "#000000",
    "actionLink": "#ffff00",
    "background": "#000000",
    "bodyDivider": "#ffffff",
    "bodyFrameBackground": "#000000",
    "bodyFrameDivider": "#000000",
    "bodyStandoutBackground": "#000000",
    "bodyText": "#ffffff",
    "bodyTextChecked": "#000000",
    "brandBackground": "#0f6cbd",
    "brandBackground2": "#115ea3",
    "brandBackground2Pressed": "#0c3b5e",
    "brandBackground2Selected": "#0e4775",
    "brandBackground3": "#0f548c",
    "brandBackgroundDisabled": "#b4d6fa",
    "brandBackgroundPressed": "#0e4775",
    "brandBackgroundSelected": "#0f548c",
    "brandBackgroundTint": "#cfe4fa",
    "brandForeground1": "#0f6cbd",
    "brandForeground1Pressed": "#0e4775",
    "brandForeground1Selected": "#0f548c",
    "brandForegroundDisabled1": "#2886de",
    "brandForegroundDisabled2": "#b4d6fa",
    "brandForegroundTint": "#0f548c",
    "brandStroke1": "#0f6cbd",
    "brandStroke1Pressed": "#0e4775",
    "brandStroke1Selected": "#0f548c",
    "brandStrokeTint": "#2886de",
    "brandedBackground": "#000000",
    "brandedDisabledBorder": "#3ff23f",
    "brandedFocusedSecondaryContent": "#ffffff",
    "brandedHoveredSecondaryContent": "#000000",
    "brandedPressedSecondaryContent": "#000000",
    "brandedSecondaryContent": "#ffffff",
    "buttonBackground": "#000000",
    "buttonBackgroundChecked": "#1aebff",
    "buttonBackgroundDisabled": "#000000",
    "buttonBackgroundHovered": "#1aebff",
    "buttonBackgroundPressed": "#1aebff",
    "buttonBorder": "#ffffff",
    "buttonBorderDisabled": "#3ff23f",
    "buttonBorderFocused": "#ffffff",
    "buttonText": "#ffffff",
    "buttonTextChecked": "#000000",
    "buttonTextDisabled": "#3ff23f",
    "buttonTextHovered": "#000000",
    "buttonTextPressed": "#000000",
    "checkboxBackground": "#000000",
    "checkboxBackgroundDisabled": "#000000",
    "checkboxBorderColor": "#ffffff",
    "checkmarkColor": "#ffffff",
    "dangerBackground1": "#fdf6f6",
    "dangerBackground2": "#d13438",
    "dangerForeground1": "#bc2f32",
    "dangerForeground2": "#d13438",
    "dangerStroke1": "#dc5e62",
    "defaultBackground": "#000000",
    "defaultBorder": "#ffffff",
    "defaultCheckedBackground": "#1aebff",
    "defaultCheckedContent": "#000000",
    "defaultCheckedHoveredBackground": "#1aebff",
    "defaultCheckedHoveredContent": "#000000",
    "defaultContent": "#ffffff",
    "defaultDisabledBackground": "#000000",
    "defaultDisabledBorder": "#3ff23f",
    "defaultDisabledContent": "#3ff23f",
    "defaultDisabledIcon": "#3ff23f",
    "defaultFocusedBackground": "#000000",
    "defaultFocusedBorder": "#ffffff",
    "defaultFocusedContent": "#ffffff",
    "defaultFocusedIcon": "#ffffff",
    "defaultHoveredBackground": "#1aebff",
    "defaultHoveredBorder": "#1aebff",
    "defaultHoveredContent": "#000000",
    "defaultHoveredIcon": "#000000",
    "defaultHoveredSecondaryContent": "#000000",
    "defaultIcon": "#ffffff",
    "defaultPressedBackground": "#1aebff",
    "defaultPressedBorder": "#1aebff",
    "defaultPressedContent": "#000000",
    "defaultPressedIcon": "#000000",
    "defaultPressedSecondaryContent": "#000000",
    "disabledBackground": "#000000",
    "disabledBodyText": "#3ff23f",
    "disabledText": "#3ff23f",
    "errorText": "#ffffff",
    "focusBorder": "#ffffff",
    "ghostBackground": "#000000",
    "ghostBorder": "#000000",
    "ghostCheckedBackground": "#1aebff",
    "ghostCheckedContent": "#000000",
    "ghostCheckedHoveredBackground": "#1aebff",
    "ghostCheckedHoveredBorder": "#000000",
    "ghostCheckedHoveredContent": "#000000",
    "ghostContent": "#ffffff",
    "ghostDisabledBackground": "#000000",
    "ghostDisabledBorder": "#000000",
    "ghostDisabledContent": "#3ff23f",
    "ghostDisabledIcon": "#3ff23f",
    "ghostFocusedBackground": "#000000",
    "ghostFocusedBorder": "#ffffff",
    "ghostFocusedContent": "#ffffff",
    "ghostFocusedIcon": "#ffffff",
    "ghostFocusedSecondaryContent": "#ffffff",
    "ghostHoveredBackground": "#1aebff",
    "ghostHoveredBorder": "#1aebff",
    "ghostHoveredContent": "#000000",
    "ghostHoveredIcon": "#000000",
    "ghostHoveredSecondaryContent": "#000000",
    "ghostIcon": "#ffffff",
    "ghostPressedBackground": "#1aebff",
    "ghostPressedBorder": "#1aebff",
    "ghostPressedContent": "#000000",
    "ghostPressedIcon": "#000000",
    "ghostPressedSecondaryContent": "#000000",
    "ghostSecondaryContent": "#ffffff",
    "inputBackground": "#000000",
    "inputBorder": "#ffffff",
    "inputFocusBorderAlt": "#ffffff",
    "inputPlaceholderText": "#ffffff",
    "inputText": "#ffffff",
    "link": "#ffff00",
    "linkHovered": "#ffffff",
    "linkPressed": "#ffffff",
    "listHeaderBackgroundHovered": "#1aebff",
    "listHeaderBackgroundPressed": "#1aebff",
    "menuBackground": "#000000",
    "menuDivider": "#ffffff",
    "menuIcon": "#ffffff",
    "menuItemBackgroundHovered": "#1aebff",
    "menuItemBackgroundPressed": "#1aebff",
    "menuItemText": "#ffffff",
    "menuItemTextHovered": "#000000",
    "neutralBackground1": "#ffffff",
    "neutralBackground1Pressed": "#e0e0e0",
    "neutralBackground1Selected": "#ebebeb",
    "neutralBackground2": "#ffffff",
    "neutralBackground2Pressed": "#e0e0e0",
    "neutralBackground2Selected": "#ebebeb",
    "neutralBackground3": "#ffffff",
    "neutralBackground3Pressed": "#e0e0e0",
    "neutralBackground3Selected": "#ebebeb",
    "neutralBackground4": "#fafafa",
    "neutralBackground4Pressed": "#dbdbdb",
    "neutralBackground4Selected": "#e6e6e6",
    "neutralBackground5": "#f0f0f0",
    "neutralBackground5Pressed": "#d1d1d1",
    "neutralBackground5Selected": "#dbdbdb",
    "neutralBackground6": "#d1d1d1",
    "neutralBackgroundCanvas": "#f5f5f5",
    "neutralBackgroundDarkStatic": "#242424",
    "neutralBackgroundDisabled": "#e0e0e0",
    "neutralBackgroundInverted": "#757575",
    "neutralBackgroundLightStatic": "#ffffff",
    "neutralBackgroundLightStaticDisabled": "#ffffff",
    "neutralForeground1": "#242424",
    "neutralForeground2": "#616161",
    "neutralForeground3": "#808080",
    "neutralForegroundDarkStatic": "#000000",
    "neutralForegroundDisabled1": "#bdbdbd",
    "neutralForegroundDisabled2": "#ffffff",
    "neutralForegroundLightStatic": "#ffffff",
    "neutralForegroundOnColor": "#ffffff",
    "neutralStencil1": "#e6e6e6",
    "neutralStencil2": "#fafafa",
    "neutralStroke1": "#d1d1d1",
    "neutralStroke2": "#e0e0e0",
    "neutralStrokeAccessible": "#616161",
    "neutralStrokeDisabled": "#e0e0e0",
    "neutralStrokeFocus1": "#ffffff",
    "neutralStrokeFocus2": "#000000",
    "personaActivityGlow": "transparent",
    "personaActivityRing": "#ffffff",
    "presenceAvailable": "#13a10e",
    "presenceAway": "#eaa300",
    "presenceDnd": "#d13438",
    "presenceOof": "#c239b3",
    "primaryButtonBackground": "#000000",
    "primaryButtonBackgroundDisabled": "#000000",
    "primaryButtonBackgroundHovered": "#1aebff",
    "primaryButtonBackgroundPressed": "#1aebff",
    "primaryButtonBorder": "#ffffff",
    "primaryButtonBorderFocused": "#ffffff",
    "primaryButtonText": "#ffffff",
    "primaryButtonTextDisabled": "#3ff23f",
    "primaryButtonTextHovered": "#000000",
    "primaryButtonTextPressed": "#000000",
    "severeBackground1": "#fdf6f3",
    "severeBackground2": "#da3b01",
    "severeForeground1": "#c43501",
    "severeForeground2": "#a62d01",
    "severeStroke1": "#de501c",
    "subText": "#ffffff",
    "successBackground1": "#f1faf1",
    "successBackground2": "#107c10",
    "successForeground1": "#0e700e",
    "successForeground2": "#107c10",
    "successStroke1": "#359b35",
    "variantBorder": "#ffffff",
    "warningBackground1": "#fffef5",
    "warningBackground2": "#fde300",
    "warningForeground1": "#817400",
    "warningForeground2": "#817400",
    "warningStroke1": "#817400",
  },
  "components": {},
  "host": {
    "appearance": "highContrast",
  },
  "shadows": {
    "shadow16": {
      "ambient": {
        "blur": 2,
        "color": "#0000001f",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 16,
        "color": "#00000024",
        "x": 0,
        "y": 8,
      },
    },
    "shadow16brand": {
      "ambient": {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 16,
        "color": "#00000040",
        "x": 0,
        "y": 8,
      },
    },
    "shadow2": {
      "ambient": {
        "blur": 2,
        "color": "#0000001f",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 2,
        "color": "#00000024",
        "x": 0,
        "y": 1,
      },
    },
    "shadow28": {
      "ambient": {
        "blur": 8,
        "color": "#00000033",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 28,
        "color": "#0000003d",
        "x": 0,
        "y": 14,
      },
    },
    "shadow28brand": {
      "ambient": {
        "blur": 8,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 28,
        "color": "#00000040",
        "x": 0,
        "y": 14,
      },
    },
    "shadow2brand": {
      "ambient": {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 2,
        "color": "#00000040",
        "x": 0,
        "y": 1,
      },
    },
    "shadow4": {
      "ambient": {
        "blur": 2,
        "color": "#0000001f",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 4,
        "color": "#00000024",
        "x": 0,
        "y": 2,
      },
    },
    "shadow4brand": {
      "ambient": {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 4,
        "color": "#00000040",
        "x": 0,
        "y": 2,
      },
    },
    "shadow64": {
      "ambient": {
        "blur": 8,
        "color": "#00000033",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 64,
        "color": "#0000003d",
        "x": 0,
        "y": 32,
      },
    },
    "shadow64brand": {
      "ambient": {
        "blur": 8,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 64,
        "color": "#00000040",
        "x": 0,
        "y": 32,
      },
    },
    "shadow8": {
      "ambient": {
        "blur": 2,
        "color": "#0000001f",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 8,
        "color": "#00000024",
        "x": 0,
        "y": 4,
      },
    },
    "shadow8brand": {
      "ambient": {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 8,
        "color": "#00000040",
        "x": 0,
        "y": 4,
      },
    },
  },
  "spacing": {
    "l1": "20px",
    "l2": "32px",
    "m": "16px",
    "s1": "8px",
    "s2": "4px",
  },
  "typography": {
    "families": {
      "cursive": "System",
      "monospace": "System",
      "numeric": "System",
      "primary": "System",
      "sansSerif": "System",
      "secondary": "System",
      "serif": "System",
    },
    "sizes": {
      "body": 15,
      "caption": 12,
      "header": 20,
      "hero": 28,
      "heroLarge": 60,
      "secondary": 13,
      "subheader": 17,
    },
    "variants": {
      "body1": {
        "face": "primary",
        "size": "secondary",
        "weight": "regular",
      },
      "body1Strong": {
        "face": "primary",
        "size": "secondary",
        "weight": "semiBold",
      },
      "body2": {
        "face": "primary",
        "size": "body",
        "weight": "regular",
      },
      "body2Strong": {
        "face": "primary",
        "size": "body",
        "weight": "semiBold",
      },
      "bodySemibold": {
        "face": "primary",
        "size": "body",
        "weight": "semiBold",
      },
      "bodyStandard": {
        "face": "primary",
        "size": "body",
        "weight": "regular",
      },
      "caption1": {
        "face": "primary",
        "size": "caption",
        "weight": "regular",
      },
      "caption1Strong": {
        "face": "primary",
        "size": "caption",
        "weight": "semiBold",
      },
      "captionStandard": {
        "face": "primary",
        "size": "caption",
        "weight": "regular",
      },
      "display": {
        "face": "primary",
        "size": "heroLarge",
        "weight": "semiBold",
      },
      "headerSemibold": {
        "face": "primary",
        "size": "header",
        "weight": "semiBold",
      },
      "headerStandard": {
        "face": "primary",
        "size": "header",
        "weight": "regular",
      },
      "heroLargeSemibold": {
        "face": "primary",
        "size": "heroLarge",
        "weight": "semiBold",
      },
      "heroLargeStandard": {
        "face": "primary",
        "size": "heroLarge",
        "weight": "regular",
      },
      "heroSemibold": {
        "face": "primary",
        "size": "hero",
        "weight": "semiBold",
      },
      "heroStandard": {
        "face": "primary",
        "size": "hero",
        "weight": "regular",
      },
      "largeTitle": {
        "face": "primary",
        "size": "heroLarge",
        "weight": "regular",
      },
      "secondarySemibold": {
        "face": "primary",
        "size": "secondary",
        "weight": "semiBold",
      },
      "secondaryStandard": {
        "face": "primary",
        "size": "secondary",
        "weight": "regular",
      },
      "subheaderSemibold": {
        "face": "primary",
        "size": "subheader",
        "weight": "semiBold",
      },
      "subheaderStandard": {
        "face": "primary",
        "size": "subheader",
        "weight": "regular",
      },
      "subtitle1": {
        "face": "primary",
        "size": "header",
        "weight": "regular",
      },
      "subtitle1Strong": {
        "face": "primary",
        "size": "header",
        "weight": "semiBold",
      },
      "subtitle2": {
        "face": "primary",
        "size": "subheader",
        "weight": "regular",
      },
      "subtitle2Strong": {
        "face": "primary",
        "size": "subheader",
        "weight": "semiBold",
      },
      "title1": {
        "face": "primary",
        "size": "hero",
        "weight": "regular",
      },
      "title1Strong": {
        "face": "primary",
        "size": "hero",
        "weight": "semiBold",
      },
    },
    "weights": {
      "regular": "400",
      "semiBold": "600",
    },
  },
}
`;

exports[`defaultFluentTheme 1`] = `
{
  "colors": {
    "accentButtonBackground": "#0f6cbd",
    "actionLink": "#323130",
    "background": "#ffffff",
    "bodyDivider": "#edebe9",
    "bodyFrameBackground": "#ffffff",
    "bodyFrameDivider": "#edebe9",
    "bodyStandoutBackground": "#faf9f8",
    "bodyText": "#323130",
    "bodyTextChecked": "#000000",
    "brandBackground": "#0f6cbd",
    "brandBackground2": "#115ea3",
    "brandBackground2Pressed": "#0c3b5e",
    "brandBackground2Selected": "#0e4775",
    "brandBackground3": "#0f548c",
    "brandBackgroundDisabled": "#b4d6fa",
    "brandBackgroundPressed": "#0e4775",
    "brandBackgroundSelected": "#0f548c",
    "brandBackgroundTint": "#cfe4fa",
    "brandForeground1": "#0f6cbd",
    "brandForeground1Pressed": "#0e4775",
    "brandForeground1Selected": "#0f548c",
    "brandForegroundDisabled1": "#2886de",
    "brandForegroundDisabled2": "#b4d6fa",
    "brandForegroundTint": "#0f548c",
    "brandStroke1": "#0f6cbd",
    "brandStroke1Pressed": "#0e4775",
    "brandStroke1Selected": "#0f548c",
    "brandStrokeTint": "#2886de",
    "brandedBackground": "#0f6cbd",
    "brandedDisabledBorder": "#f3f2f1",
    "brandedFocusedSecondaryContent": "#faf9f8",
    "brandedHoveredSecondaryContent": "#faf9f8",
    "brandedPressedSecondaryContent": "#faf9f8",
    "brandedSecondaryContent": "#faf9f8",
    "buttonBackground": "#f3f2f1",
    "buttonBackgroundChecked": "#c8c6c4",
    "buttonBackgroundDisabled": "#f3f2f1",
    "buttonBackgroundHovered": "#edebe9",
    "buttonBackgroundPressed": "#edebe9",
    "buttonBorder": "#8a8886",
    "buttonBorderDisabled": "#f3f2f1",
    "buttonBorderFocused": "#8a8886",
    "buttonText": "#323130",
    "buttonTextChecked": "#201f1e",
    "buttonTextDisabled": "#a19f9d",
    "buttonTextHovered": "#201f1e",
    "buttonTextPressed": "#201f1e",
    "checkboxBackground": "#0f6cbd",
    "checkboxBackgroundDisabled": "#f3f2f1",
    "checkboxBorderColor": "#8a8886",
    "checkmarkColor": "#ffffff",
    "dangerBackground1": "#fdf6f6",
    "dangerBackground2": "#d13438",
    "dangerForeground1": "#bc2f32",
    "dangerForeground2": "#d13438",
    "dangerStroke1": "#dc5e62",
    "defaultBackground": "#f3f2f1",
    "defaultBorder": "#8a8886",
    "defaultCheckedBackground": "#c8c6c4",
    "defaultCheckedContent": "#201f1e",
    "defaultCheckedHoveredBackground": "#edebe9",
    "defaultCheckedHoveredContent": "#201f1e",
    "defaultContent": "#323130",
    "defaultDisabledBackground": "#f3f2f1",
    "defaultDisabledBorder": "#f3f2f1",
    "defaultDisabledContent": "#a19f9d",
    "defaultDisabledIcon": "#a19f9d",
    "defaultFocusedBackground": "#edebe9",
    "defaultFocusedBorder": "#8a8886",
    "defaultFocusedContent": "#201f1e",
    "defaultFocusedIcon": "#201f1e",
    "defaultHoveredBackground": "#edebe9",
    "defaultHoveredBorder": "#8a8886",
    "defaultHoveredContent": "#201f1e",
    "defaultHoveredIcon": "#201f1e",
    "defaultHoveredSecondaryContent": "#a19f9d",
    "defaultIcon": "#323130",
    "defaultPressedBackground": "#edebe9",
    "defaultPressedBorder": "#8a8886",
    "defaultPressedContent": "#201f1e",
    "defaultPressedIcon": "#201f1e",
    "defaultPressedSecondaryContent": "#a19f9d",
    "disabledBackground": "#f3f2f1",
    "disabledBodyText": "#a19f9d",
    "disabledText": "#a19f9d",
    "errorText": "#a4262c",
    "focusBorder": "#605e5c",
    "ghostBackground": "#ffffff",
    "ghostBorder": "#ffffff",
    "ghostCheckedBackground": "#edebe9",
    "ghostCheckedContent": "#000000",
    "ghostCheckedHoveredBackground": "#f3f2f1",
    "ghostCheckedHoveredBorder": "#201f1e",
    "ghostCheckedHoveredContent": "#201f1e",
    "ghostContent": "#323130",
    "ghostDisabledBackground": "#ffffff",
    "ghostDisabledBorder": "#ffffff",
    "ghostDisabledContent": "#a19f9d",
    "ghostDisabledIcon": "#a19f9d",
    "ghostFocusedBackground": "#f3f2f1",
    "ghostFocusedBorder": "#8a8886",
    "ghostFocusedContent": "#201f1e",
    "ghostFocusedIcon": "#201f1e",
    "ghostFocusedSecondaryContent": "#605e5c",
    "ghostHoveredBackground": "#f3f2f1",
    "ghostHoveredBorder": "#f3f2f1",
    "ghostHoveredContent": "#201f1e",
    "ghostHoveredIcon": "#201f1e",
    "ghostHoveredSecondaryContent": "#605e5c",
    "ghostIcon": "#323130",
    "ghostPressedBackground": "#edebe9",
    "ghostPressedBorder": "#edebe9",
    "ghostPressedContent": "#201f1e",
    "ghostPressedIcon": "#201f1e",
    "ghostPressedSecondaryContent": "#605e5c",
    "ghostSecondaryContent": "#605e5c",
    "inputBackground": "#ffffff",
    "inputBorder": "#a19f9d",
    "inputFocusBorderAlt": "#0f6cbd",
    "inputPlaceholderText": "#605e5c",
    "inputText": "#323130",
    "link": "#0f6cbd",
    "linkHovered": "#0c3b5e",
    "linkPressed": "#0f548c",
    "listHeaderBackgroundHovered": "#f3f2f1",
    "listHeaderBackgroundPressed": "#edebe9",
    "menuBackground": "#ffffff",
    "menuDivider": "#c8c6c4",
    "menuIcon": "#0f6cbd",
    "menuItemBackgroundHovered": "#f3f2f1",
    "menuItemBackgroundPressed": "#edebe9",
    "menuItemText": "#323130",
    "menuItemTextHovered": "#201f1e",
    "neutralBackground1": "#ffffff",
    "neutralBackground1Pressed": "#e0e0e0",
    "neutralBackground1Selected": "#ebebeb",
    "neutralBackground2": "#ffffff",
    "neutralBackground2Pressed": "#e0e0e0",
    "neutralBackground2Selected": "#ebebeb",
    "neutralBackground3": "#ffffff",
    "neutralBackground3Pressed": "#e0e0e0",
    "neutralBackground3Selected": "#ebebeb",
    "neutralBackground4": "#fafafa",
    "neutralBackground4Pressed": "#dbdbdb",
    "neutralBackground4Selected": "#e6e6e6",
    "neutralBackground5": "#f0f0f0",
    "neutralBackground5Pressed": "#d1d1d1",
    "neutralBackground5Selected": "#dbdbdb",
    "neutralBackground6": "#d1d1d1",
    "neutralBackgroundCanvas": "#f5f5f5",
    "neutralBackgroundDarkStatic": "#242424",
    "neutralBackgroundDisabled": "#e0e0e0",
    "neutralBackgroundInverted": "#757575",
    "neutralBackgroundLightStatic": "#ffffff",
    "neutralBackgroundLightStaticDisabled": "#ffffff",
    "neutralForeground1": "#242424",
    "neutralForeground2": "#616161",
    "neutralForeground3": "#808080",
    "neutralForegroundDarkStatic": "#000000",
    "neutralForegroundDisabled1": "#bdbdbd",
    "neutralForegroundDisabled2": "#ffffff",
    "neutralForegroundLightStatic": "#ffffff",
    "neutralForegroundOnColor": "#ffffff",
    "neutralStencil1": "#e6e6e6",
    "neutralStencil2": "#fafafa",
    "neutralStroke1": "#d1d1d1",
    "neutralStroke2": "#e0e0e0",
    "neutralStrokeAccessible": "#616161",
    "neutralStrokeDisabled": "#e0e0e0",
    "neutralStrokeFocus1": "#ffffff",
    "neutralStrokeFocus2": "#000000",
    "personaActivityGlow": "#0f6cbd",
    "personaActivityRing": "#ffffff",
    "presenceAvailable": "#13a10e",
    "presenceAway": "#eaa300",
    "presenceDnd": "#d13438",
    "presenceOof": "#c239b3",
    "primaryButtonBackground": "#0f6cbd",
    "primaryButtonBackgroundDisabled": "#f3f2f1",
    "primaryButtonBackgroundHovered": "#115ea3",
    "primaryButtonBackgroundPressed": "#0f548c",
    "primaryButtonBorder": "transparent",
    "primaryButtonBorderFocused": "transparent",
    "primaryButtonText": "#ffffff",
    "primaryButtonTextDisabled": "#d2d0ce",
    "primaryButtonTextHovered": "#ffffff",
    "primaryButtonTextPressed": "#ffffff",
    "severeBackground1": "#fdf6f3",
    "severeBackground2": "#da3b01",
    "severeForeground1": "#c43501",
    "severeForeground2": "#a62d01",
    "severeStroke1": "#de501c",
    "subText": "#605e5c",
    "successBackground1": "#f1faf1",
    "successBackground2": "#107c10",
    "successForeground1": "#0e700e",
    "successForeground2": "#107c10",
    "successStroke1": "#359b35",
    "variantBorder": "#edebe9",
    "warningBackground1": "#fffef5",
    "warningBackground2": "#fde300",
    "warningForeground1": "#817400",
    "warningForeground2": "#817400",
    "warningStroke1": "#817400",
  },
  "components": {},
  "host": {
    "appearance": "light",
  },
  "shadows": {
    "shadow16": {
      "ambient": {
        "blur": 2,
        "color": "#0000001f",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 16,
        "color": "#00000024",
        "x": 0,
        "y": 8,
      },
    },
    "shadow16brand": {
      "ambient": {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 16,
        "color": "#00000040",
        "x": 0,
        "y": 8,
      },
    },
    "shadow2": {
      "ambient": {
        "blur": 2,
        "color": "#0000001f",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 2,
        "color": "#00000024",
        "x": 0,
        "y": 1,
      },
    },
    "shadow28": {
      "ambient": {
        "blur": 8,
        "color": "#00000033",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 28,
        "color": "#0000003d",
        "x": 0,
        "y": 14,
      },
    },
    "shadow28brand": {
      "ambient": {
        "blur": 8,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 28,
        "color": "#00000040",
        "x": 0,
        "y": 14,
      },
    },
    "shadow2brand": {
      "ambient": {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 2,
        "color": "#00000040",
        "x": 0,
        "y": 1,
      },
    },
    "shadow4": {
      "ambient": {
        "blur": 2,
        "color": "#0000001f",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 4,
        "color": "#00000024",
        "x": 0,
        "y": 2,
      },
    },
    "shadow4brand": {
      "ambient": {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 4,
        "color": "#00000040",
        "x": 0,
        "y": 2,
      },
    },
    "shadow64": {
      "ambient": {
        "blur": 8,
        "color": "#00000033",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 64,
        "color": "#0000003d",
        "x": 0,
        "y": 32,
      },
    },
    "shadow64brand": {
      "ambient": {
        "blur": 8,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 64,
        "color": "#00000040",
        "x": 0,
        "y": 32,
      },
    },
    "shadow8": {
      "ambient": {
        "blur": 2,
        "color": "#0000001f",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 8,
        "color": "#00000024",
        "x": 0,
        "y": 4,
      },
    },
    "shadow8brand": {
      "ambient": {
        "blur": 2,
        "color": "#0000004d",
        "x": 0,
        "y": 0,
      },
      "key": {
        "blur": 8,
        "color": "#00000040",
        "x": 0,
        "y": 4,
      },
    },
  },
  "spacing": {
    "l1": "20px",
    "l2": "32px",
    "m": "16px",
    "s1": "8px",
    "s2": "4px",
  },
  "typography": {
    "families": {
      "cursive": "System",
      "monospace": "System",
      "numeric": "System",
      "primary": "System",
      "sansSerif": "System",
      "secondary": "System",
      "serif": "System",
    },
    "sizes": {
      "body": 15,
      "caption": 12,
      "header": 20,
      "hero": 28,
      "heroLarge": 60,
      "secondary": 13,
      "subheader": 17,
    },
    "variants": {
      "body1": {
        "face": "primary",
        "size": "secondary",
        "weight": "regular",
      },
      "body1Strong": {
        "face": "primary",
        "size": "secondary",
        "weight": "semiBold",
      },
      "body2": {
        "face": "primary",
        "size": "body",
        "weight": "regular",
      },
      "body2Strong": {
        "face": "primary",
        "size": "body",
        "weight": "semiBold",
      },
      "bodySemibold": {
        "face": "primary",
        "size": "body",
        "weight": "semiBold",
      },
      "bodyStandard": {
        "face": "primary",
        "size": "body",
        "weight": "regular",
      },
      "caption1": {
        "face": "primary",
        "size": "caption",
        "weight": "regular",
      },
      "caption1Strong": {
        "face": "primary",
        "size": "caption",
        "weight": "semiBold",
      },
      "captionStandard": {
        "face": "primary",
        "size": "caption",
        "weight": "regular",
      },
      "display": {
        "face": "primary",
        "size": "heroLarge",
        "weight": "semiBold",
      },
      "headerSemibold": {
        "face": "primary",
        "size": "header",
        "weight": "semiBold",
      },
      "headerStandard": {
        "face": "primary",
        "size": "header",
        "weight": "regular",
      },
      "heroLargeSemibold": {
        "face": "primary",
        "size": "heroLarge",
        "weight": "semiBold",
      },
      "heroLargeStandard": {
        "face": "primary",
        "size": "heroLarge",
        "weight": "regular",
      },
      "heroSemibold": {
        "face": "primary",
        "size": "hero",
        "weight": "semiBold",
      },
      "heroStandard": {
        "face": "primary",
        "size": "hero",
        "weight": "regular",
      },
      "largeTitle": {
        "face": "primary",
        "size": "heroLarge",
        "weight": "regular",
      },
      "secondarySemibold": {
        "face": "primary",
        "size": "secondary",
        "weight": "semiBold",
      },
      "secondaryStandard": {
        "face": "primary",
        "size": "secondary",
        "weight": "regular",
      },
      "subheaderSemibold": {
        "face": "primary",
        "size": "subheader",
        "weight": "semiBold",
      },
      "subheaderStandard": {
        "face": "primary",
        "size": "subheader",
        "weight": "regular",
      },
      "subtitle1": {
        "face": "primary",
        "size": "header",
        "weight": "regular",
      },
      "subtitle1Strong": {
        "face": "primary",
        "size": "header",
        "weight": "semiBold",
      },
      "subtitle2": {
        "face": "primary",
        "size": "subheader",
        "weight": "regular",
      },
      "subtitle2Strong": {
        "face": "primary",
        "size": "subheader",
        "weight": "semiBold",
      },
      "title1": {
        "face": "primary",
        "size": "hero",
        "weight": "regular",
      },
      "title1Strong": {
        "face": "primary",
        "size": "hero",
        "weight": "semiBold",
      },
    },
    "weights": {
      "regular": "400",
      "semiBold": "600",
    },
  },
}
`;
